<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/ewatheq_color_sign_in_bg">

    <ScrollView
        android:id="@+id/sv_main"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_centerInParent="true"
        android:layout_gravity="center"
        android:paddingBottom="10dp"
        android:paddingTop="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:orientation="vertical"
            android:paddingLeft="20dp"
            android:paddingRight="20dp">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="@android:color/transparent"
                android:focusable="true"
                android:focusableInTouchMode="true"
                android:gravity="center"
                android:padding="20dp"
                android:scaleType="fitCenter"
                android:src="@drawable/screen_logo" />

            <EditText
                android:id="@+id/et_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="20dp"
                android:background="@drawable/bg_et_email"
                android:gravity="left"
                android:hint="@string/str_email"
                android:inputType="textEmailAddress" />

            <EditText
                android:id="@+id/et_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="20dp"
                android:background="@drawable/bg_et_password"
                android:gravity="left"
                android:hint="@string/str_password"
                android:inputType="textPassword" />

            <com.balysv.materialripple.MaterialRippleLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:background="@drawable/bg_btn_primary"
                app:mrl_rippleColor="@color/ewatheq_color_one_forth_white_transparent">

                <TextView
                    android:id="@+id/btn_sign_in"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:padding="15dp"
                    android:text="@string/str_sign_in"
                    android:textColor="@android:color/white" />
            </com.balysv.materialripple.MaterialRippleLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="15dp"
                android:orientation="horizontal">


                <com.balysv.materialripple.MaterialRippleLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="10dp"
                    android:layout_weight="1"
                    app:mrl_rippleColor="@color/ewatheq_color_primary_one_fifth">

                    <TextView
                        android:id="@+id/btn_register_id_scan"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:background="@drawable/bg_btn_secondary"
                        android:gravity="center"
                        android:padding="13dp"
                        android:text="@string/str_register_id_scan"
                        android:textColor="@android:color/black" />
                </com.balysv.materialripple.MaterialRippleLayout>


                <com.balysv.materialripple.MaterialRippleLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    app:mrl_rippleColor="@color/ewatheq_color_primary_one_fifth">

                    <TextView
                        android:id="@+id/btn_register_manual"

                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:background="@drawable/bg_btn_secondary"
                        android:gravity="center"
                        android:padding="13dp"
                        android:text="@string/str_register_manual"
                        android:textColor="@android:color/black" />
                </com.balysv.materialripple.MaterialRippleLayout>
            </LinearLayout>

            <TextView
                android:id="@+id/btn_forgot_password"

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="10dp"
                android:gravity="center"
                android:padding="10dp"
                android:text="@string/str_forgot_password"
                android:textColor="@color/ewatheq_color_forgot_password" />
        </LinearLayout>
    </ScrollView>

    <RelativeLayout
        android:id="@+id/rl_loading"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/ewatheq_color_half_black_transparent"
        android:visibility="gone">

        <ProgressBar
            android:id="@+id/pb_loading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true" />
    </RelativeLayout>

</RelativeLayout>